--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -67,6 +67,10 @@
 .caption>.md
     margin-top -15px
     color #888
+.casesh1
+    text-align center
+.casesli
+    text-align center
 #texts
     width 50%
     float right
