--- a/views/colophon.jade
+++ b/views/colophon.jade
@@ -1,6 +1,7 @@
 :markdown
-  Application made with [node.js](http://nodejs.org/) and [express.js](http://expressjs.com) templates in [jade](http://jade-lang.com/), styled with [stylus](http://learnboost.github.com/stylus/). Written in [markdown](http://daringfireball.net/projects/markdown/). Hosted by [Linode](http://linode.com/).
-  Grab the source from [Github](https://github.com/lijf/radioca.se), it is available under the [MIT license](http://www.opensource.org/licenses/mit-license.php)
+  Application made with [node.js](http://nodejs.org/) and [express.js](http://expressjs.com), templates in [jade](http://jade-lang.com/), styled with [stylus](http://learnboost.github.com/stylus/). Written in [markdown](http://daringfireball.net/projects/markdown/). Backed by [redis](http://redis.io). Hosted by [Linode](http://linode.com/).
+
+  Grab the source from [Github](https://github.com/lijf/RADIOCA.SE), it is available under the [MIT license](http://www.opensource.org/licenses/mit-license.php)
 
 
 
