new twitter button

--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -5,6 +5,8 @@
     text-align center
 #newcase
     margins 0 auto
+#twitbutt
+    width 130px
 .big_logo
     color #bca
     font-family "Orbitron"
@@ -70,6 +72,18 @@
 .casesh1
     text-align center
 .casesli
+    text-align center
+#cases_lc
+    width 50%
+    float left
+    text-align right
+#cases_rc
+    width 50%
+    float right
+    text-align left
+#cases
+    width 100%
+    float left
     text-align center
 #texts
     width 50%
