--- a/views/layout.jade
+++ b/views/layout.jade
@@ -18,8 +18,7 @@ html
         | RADIOCA.SE
     #container
       #session
-        button(id='twitbutt')
-          | Sign in with twitter
+        img(id='twitbutt', src='/images/twitter_button_4_hi.gif')
       != body // this renders the body of an individual view
     #footer
       a(href='/')
