changed button back

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -18,7 +18,8 @@ html
         | RADIOCA.SE
     #container
       #session
-        img(id='twitbutt', src='/images/twitter_button_4_hi.gif')
+        button(id='twitbutt')
+          | Sign in with twitter
       != body // this renders the body of an individual view
     #footer
       a(href='/')
