--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -11,21 +11,10 @@
     font-weight bold
     font-size 50pt
     margin-top 30px
-.welcome
+.damion
     font-family "Damion"
-    font-size 40pt
-    color #e90
 #sl
     position fixed
-    height 0
-    width 20px
-    -webkit-transform rotate(-90deg)
-    -moz-transform rotate(-90deg)
-    margin-top 110px
-.small_logo
-    font-family "Orbitron"
-    text-decoration none
-    color #bca
 #delete_dialog
     position fixed
     left 30%
@@ -80,6 +69,7 @@
     float right
     text-align left
 #cases
+    line-height 150%
     width 100%
     float left
     text-align center
