--- a/views/layout.jade
+++ b/views/layout.jade
@@ -14,8 +14,8 @@ html
       script(type='text/javascript', src='/javascripts/#{script}')
   body
     #sl
-      a.small_logo(href='/')
-        | RADIOCA.SE
+      a(href='/')
+        img(src='/images/RADIOCA.SE_small_logo.png')
     #container
       #session
         button(id='twitbutt')
