--- a/views/newcase.jade
+++ b/views/newcase.jade
@@ -1,5 +1,5 @@
 form(id='newcase')
-  h3 Create new case
+  h2.damion Create new case
   | Title
   input(type='text', name='title', id='title')
   br
