--- a/views/newcase.jade
+++ b/views/newcase.jade
@@ -1,5 +1,5 @@
+h2.damion(style='margin: 0') Create new case
 form(id='newcase')
-  h2.damion Create new case
   | Title
   input(type='text', name='title', id='title')
   br
