--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -152,7 +152,7 @@ html
     height 100%
 body
     font-family Georgia, Palatino, serif
-    color #888
+    color #aaa
     background-color #333
     line-height 1
     height 100%
