--- a/views/layout.jade
+++ b/views/layout.jade
@@ -27,6 +27,9 @@ html
       a(href='/')
         | Home
       | -
+      a(href='/cases/0/-1')
+        | Cases
+      | -
       a(href='/about')
         | About
       | -
