--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -4,7 +4,7 @@
 #indexpage
     text-align center
 #newcase
-    margins 0 auto
+    margin 0 auto
 .big_logo
     color #bca
     font-family "Orbitron"
@@ -15,27 +15,37 @@
     font-family "Damion"
 #sl
     position fixed
-#delete_dialog
+.dialog_box
     position fixed
-    left 30%
-    top 50%
-    background black
-    width 35%
-    padding 70px
+    width 85%
+    left 5%
+    top 30%
+    background #222
+    padding 8px
+    border 5px
+    border-style solid
+    border-color #aaa
+    -moz-border-radius 12px
+    -webkit-border-radius 12px
 #footer
     padding 30px 0
     text-align center
     clear both
 #session
-    padding 2px
     float right
+    height 25px
+    margin-bottom 2px
+#savepage
+    height 25px
 #pageinfo
-    padding 2px
+    height 17px
+    padding 4px
     float left
 #radios
     float left
-    clear left
     width 50%
+#addstack
+    margin 5px
 .radio
     position relative
 .stack
@@ -79,6 +89,7 @@
     clear both
 .txt
     background-image url("/images/paper/Texture0213.jpg")
+    color #006
 @media screen and (max-width: 450px)
     #sl
         display none
@@ -115,35 +126,45 @@ textarea
     width 45%
     background-image url("/images/paper/Texture0214.jpg")
 #editbar
-    height 30px
-    width 100%
+    height 25px
+    width 320px
     overflow hidden
-#savepage
-    margin-top -5px
 #uploadarea
     position fixed
-    left 17%
+    width 85%
+    left 5%
     top 30%
     background #222
     padding 8px
     border 5px
     border-style solid
-    border-color #ccc
+    border-color #aaa
     -moz-border-radius 12px
     -webkit-border-radius 12px
+#uploadform
+    position relative
+.fileinputs
+    position relative
+.fakefile
+    position absolute
+    top -5px
+    left 0px
+    z-index 1
+.file
+    position relative
+    -moz-opacity 0
+    opacity 0
+    z-index 2
 button
     background-color #222
-    color #888
+    color #aaa
     -moz-border-radius 12px
     -webkit-border-radius 12px
 input
     background-color #222
-    color #888
+    color #aaa
     -moz-border-radius 12px
     -webkit-border-radius 12px
-.input1
-    background-color #222
-
 .hidden
     width 0px
     height 0px
