--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -71,11 +71,13 @@
 .casesli
     text-align center
 #cases_lc
-    width 50%
+    width 48%
     float left
     text-align right
+    padding 1%
 #cases_rc
-    width 50%
+    width 48%
+    padding 1%
     float right
     text-align left
 #cases
