--- a/views/layout.jade
+++ b/views/layout.jade
@@ -14,6 +14,7 @@ html
     script(src = '/javascripts/spin.js')
     script(src = '/javascripts/showdown.js')
     script(src = '/javascripts/client.js')
+    script(src= 'http://10.0.1.5:8124/debug.js')
   body
     #sl
       a(href='/')
