--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -53,6 +53,8 @@
     overflow hidden
 .stack_image
     display none
+    top 0px
+    left 0px
     width 100%
     overflow scroll
 .imgload
@@ -129,7 +131,7 @@ textarea
     background-image url("/images/paper/Texture0214.jpg")
 #editbar
     height 25px
-    width 320px
+    width 350px
     overflow hidden
 #uploadarea
     position fixed
