--- a/views/case.jade
+++ b/views/case.jade
@@ -6,7 +6,7 @@
     @#{creator}  
 button(id='#{edit_or_feedback}')
   #{editfeedbacktext}
-iframe(id='editbar', src='about:none')
+iframe(id='editbar', src='about:none', style='display:none')
 #texts
   -each text in texts
     .txt
@@ -28,16 +28,16 @@ iframe(id='editbar', src='about:none')
         textarea.mdtxt(style='display:none')
           #{r.caption}
         .md
-  button(id='addstack')
+  button(id='addstack', style='display:none')
     | +
-#markdown-help
+#markdown-help(style='display:none')
   button(id='closehelp')
     | X
   textarea.mdtxt(style='display:none')
     #{mdhelp}
   .md
-#info
-#delete_dialog.dialog_box
+#info(style='display:none')
+#delete_dialog.dialog_box(style='display:none')
   form(id='deletepage', action='/case/#{cid}/#{page}/delete')
     | Are you sure you want to delete this page?
     br
@@ -45,7 +45,15 @@ iframe(id='editbar', src='about:none')
       | Confirm'
     button(id='canceldelete', type='button')
       | Cancel
-#uploadarea
+#meta_dialog.dialog_box(style='display:none')
+  form(id='meta')
+    | Title:
+    input(type='text', id='meta_title', value='#{title}')
+    | Private
+    input(type='checkbox', id='meta_private', value='private', name='private')
+    button(id='meta_ok', type='button')
+      | OK
+#uploadarea.dialog_box(style='display:none')
   | Please choose image(s) to upload.
   br
   | If multiple images are uploaded together they will be combined to a stack.
@@ -63,15 +71,7 @@ iframe(id='editbar', src='about:none')
       | cancel
 script(type='text/javascript')
   $(function(){
-    $('#markdown-help').hide();
-    $('#info').hide();
-    $('#addstack').hide();
-    $('#uploadarea').hide();
-    $('#editbar').hide();
-    $('#newpage').hide();
     $('.stack').children(':first').show();
-    $('#delete_dialog').hide();
-    //$('#editbutton').hide();
 
     rendermd(); // renders the markdown textareas.
     
@@ -82,7 +82,5 @@ script(type='text/javascript')
         $(this).siblings(".md").show();
       }
     }); // hides the textbox and renders the markdown
-    var user = '#{user}';
-    if(#{signed_in}){sessionButton('#{user}')};
-    //if(#{editor}){alert('editor')}
+    if(#{private}){$('#meta_private').attr('checked');}
   });
