--- a/views/edit.jade
+++ b/views/edit.jade
@@ -5,7 +5,10 @@
     input(type='hidden', name='_method', value='put')
     button(id='help', type='button')
       | ?
-    input(id='save', type='submit', value='Save page')
+    button(id='save', type='button')
+      | Save
+    button(id='meta_button', type='button')
+      | Meta
     button(id='newpage', type='button')
       | New Page
     button(id='delpage', type='button')
