--- a/views/newcase.jade
+++ b/views/newcase.jade
@@ -8,7 +8,7 @@ form(id='newcase')
   input(type='text', name='ICD', id='ICD')
   br
   | Private 
-  input(type='checkbox', name='private', id='private', value='private')
+  input(type='checkbox', name='meta_private', id='meta_private', value='meta_private')
   br
   button(id='createcase', type='button')
     | Create Case
