--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,7 +2,8 @@
 html
   head
     meta(name='viewport', content='initial-scale=1.0, width=device-width')
-    title #{title}
+    title RADIOCA.SE - #{title}
+
     link(href='http://fonts.googleapis.com/css?family=Orbitron:400,500|Dancing+Script|Damion', rel='stylesheet', type='text/css')
     link(rel='stylesheet', href='/stylesheets/reset.css')
     link(rel='stylesheet', href='/stylesheets/style.css')
