meta_private working

--- a/views/case.jade
+++ b/views/case.jade
@@ -49,7 +49,7 @@ iframe(id='editbar', src='about:none', style='display:none')
     | Title:
     input(type='text', id='meta_title', value='#{title}')
     | Private
-    input(type='checkbox', id='meta_private', value='meta_private', name='meta_private')
+    input(type='checkbox', id='meta_private', value='1', name='meta_private')
     button(id='meta_ok', type='button')
       | OK
 #uploadarea.dialog_box(style='display:none')
