planning to redo buttons

--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -5,6 +5,20 @@
     text-align center
 #newcase
     margin 0 auto
+#userinfo
+    position absolute
+    top 20px
+    right 5%
+    z-index 1
+    padding 0 10px 10px 10px
+    border-style solid
+    border-width 0 0 1px 1px
+    border-color #aaa
+.session
+    font-family helvetica, arial
+    background-color #333
+    padding 5px
+    cursor pointer
 .big_logo
     color #bca
     font-family "Orbitron"
@@ -32,8 +46,7 @@
     clear both
 #session
     float right
-    height 25px
-    margin-bottom 2px
+    height 20px
 #savepage
     height 25px
 #pageinfo
