--- a/views/edit.jade
+++ b/views/edit.jade
@@ -1,7 +1,7 @@
 #controls
   form(id='savepage', action='/case/#{caseid}/#{page}')
     button(id='done', type='button')
-      | Done
+      | Close editbar
     input(type='hidden', name='_method', value='put')
     button(id='help', type='button')
       | ?
