--- a/views/index.jade
+++ b/views/index.jade
@@ -2,7 +2,7 @@
   br
   .big_logo RADIOCA.SE
 
-  img(src='/images/OldRadio_2_320.jpg')
+  img(src='/images/OldRadio_2_320.svg', style='width: 320px')
 
   h1.damion -Welcome
 
