--- a/views/layout.jade
+++ b/views/layout.jade
@@ -21,8 +21,13 @@ html
         img(src='/images/RADIOCA.SE_small_logo.png')
     #container
       #session
-        button(id='twitbutt')
-          | Sign in with twitter
+        a.session(id='sign_in') Sign in with twitter
+      #userinfo.session(style='display:none')
+        a My cases
+        br
+        a My messages
+        br
+        a(id='sign_out') Sign out
       != body // this renders the body of an individual view
     #footer
       a(href='/')
@@ -42,5 +47,7 @@ html
 script(type='text/javascript')
   $(function(){
     var user = '#{user}';
-    if(#{signed_in}){sessionButton('#{user}')};
+    if(#{signed_in}){
+      $('#session').html('<a class="session" id="user_settings">#{user} ▼ </a>');
+    }
   });
