new caselist working

--- a/views/case.jade
+++ b/views/case.jade
@@ -2,22 +2,24 @@ iframe.hidden(name="postframe", id="postframe", src="about:none")
 #pageinfo
   | by:
   a(href='https://twitter.com/intent/user?screen_name=#{creator}')
-    @#{creator}  
-button(id='#{edit_or_feedback}')
-  #{editfeedbacktext}
+    @#{creator}
+- if('#{editor}')
+    a.session(id='editbutton')
+      | ◀
+- if(!'#{editor}')
+    a.session(id='feedbackbutton')
 iframe(id='editbar', src='about:none', style='display:none')
 #texts
-  -each text in texts
-    .txt
-      textarea.mdtxt(style='display:none')
-        #{text}
-      .md
+  .txt
+    textarea.mdtxt(style='display:none')
+      #{texts}
+    .md
   br
   -if('#{prevpage}')
     a(href='/case/#{cid}/#{prevpage}', style='float: left')
-      | <- prev page
+      | ◀
   a(href='/case/#{cid}/#{nextpage}', style='float: right')
-    |   next page ->
+    | ▶
 #radios
   - each r in radios
     .radio
@@ -28,14 +30,14 @@ iframe(id='editbar', src='about:none', style='display:none')
         textarea.mdtxt(style='display:none')
           #{r.caption}
         .md
-  button(id='addstack', style='display:none')
-    | +
-#markdown-help(style='display:none')
-  button(id='closehelp')
-    | X
-  textarea.mdtxt(style='display:none')
-    #{mdhelp}
-  .md
+  a.session(id='addstack')
+    | ＋
+  #markdown-help(style='display:none')
+    a.session(id='closehelp')
+      | X
+    textarea.mdtxt(style='display:none')
+      #{mdhelp}
+    .md
 #info(style='display:none')
 #delete_dialog.dialog_box(style='display:none')
   form(id='deletepage', action='/case/#{cid}/#{page}/delete')
@@ -53,6 +55,13 @@ iframe(id='editbar', src='about:none', style='display:none')
     input(type='checkbox', id='meta_private', value='1', name='meta_private')
     button(id='meta_ok', type='button')
       | OK
+#save_dialog.dialog_box(style='display:none')
+  | Save page?
+  br
+  button(id='save', type='button')
+    | OK
+  button(id='cancelsave', type='button')
+    | Cancel
 #feedback_dialog.dialog_box(style='display:none')
   form(id='feedback')
     textarea(id='feedback_text')
@@ -70,7 +79,9 @@ iframe(id='editbar', src='about:none', style='display:none')
 #uploadarea.dialog_box(style='display:none')
   | Please choose image(s) to upload.
   br
-  | If multiple images are uploaded together they will be combined to a stack.
+  | If multiple images are uploaded together,
+  br
+  | they will be combined to a stack.
   br
   br
   form(id='uploadform')
