--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -7,18 +7,22 @@
     margin 0 auto
 #userinfo
     position absolute
-    top 20px
+    top 25px
     right 5%
     z-index 1
     padding 0 10px 10px 10px
     border-style solid
     border-width 0 0 1px 1px
     border-color #aaa
+    background #333
+#addstack
+    float left
 .session
     font-family helvetica, arial
-    background-color #333
-    padding 5px
+    padding-top 3px
     cursor pointer
+    float right
+    line-height 1.3
 .big_logo
     color #bca
     font-family "Orbitron"
@@ -35,11 +39,9 @@
     top 30%
     background #222
     padding 8px
-    border 5px
+    border 2px
     border-style solid
     border-color #aaa
-    -moz-border-radius 12px
-    -webkit-border-radius 12px
 #footer
     padding 30px 0
     text-align center
@@ -144,11 +146,12 @@ textarea
     background-image url("/images/paper/Texture0213.jpg")
     color #006
     position absolute
-    width 50%
+    width 45%
 #editbar
     height 25px
-    width 350px
     overflow hidden
+    float right
+    width 12em
 #uploadform
     position relative
 .fileinputs
@@ -166,13 +169,9 @@ textarea
 button
     background-color #222
     color #aaa
-    -moz-border-radius 12px
-    -webkit-border-radius 12px
 input
     background-color #222
     color #aaa
-    -moz-border-radius 12px
-    -webkit-border-radius 12px
 .hidden
     width 0px
     height 0px
