working on About

--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -135,6 +135,11 @@
         width 35%
     #markdown-help
         width 65%
+#readme
+    padding 5%
+#about
+    padding 5%
+
 textarea
     width 100%
     line-height 1.2
@@ -147,6 +152,8 @@ textarea
     color #006
     position absolute
     width 45%
+    top 25px
+    left 5%
 #editbar
     height 25px
     overflow hidden
