--- a/views/about.jade
+++ b/views/about.jade
@@ -1,7 +1,8 @@
-:markdown
-  \- a database of radiological cases.
+#about
+  :markdown
+    \- a database of radiological cases.
 
-  This is an invite-only site. If you have been invited you can log in using your twitter account. The site is under development and free to use for the moment.
+    This is an invite-only site. If you have been invited you can log in using your twitter account. The site is under development and free to use for the moment.
 
-  I hope the site in itself is rather self-explanatory. For more information please see the Readme.
+    I hope the site in itself is rather self-explanatory. For more information please see the Readme.
 
