--- a/views/newcase.jade
+++ b/views/newcase.jade
@@ -1,11 +1,11 @@
 h2.damion(style='margin: 0') Create new case
 form(id='newcase')
   | Title
-  input(type='text', name='title', id='title')
+  input(type='text', name='meta_title', id='meta_title')
   br
   | ICD-Code
   sup *
-  input(type='text', name='ICD', id='ICD')
+  input(type='text', name='meta_icd', id='meta_icd')
   br
   | Private 
   input(type='checkbox', name='meta_private', id='meta_private', value='meta_private')
