--- a/views/case.jade
+++ b/views/case.jade
@@ -22,7 +22,7 @@ iframe(id='editbar', src='about:none', style='display:none')
     | ▶
 #radios
   - each r in radios
-    .radio
+    .radio(id='#{r.ID}')
       .stack
         - each i in r.images
           img.stack_image(src='#{i}')
