working radio_delete

--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -60,6 +60,9 @@
     width 50%
 #addstack
     margin 5px
+.selected
+    border-color red
+    border solid
 .radio
     position relative
 .stack
