fixing img upload

--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -63,6 +63,9 @@
 .selected
     border-color red
     border solid
+.userradio
+    width 50%
+    float left
 .radio
     position relative
 .stack
