--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -1,10 +1,12 @@
+#centerdiv
+    margin 0 auto
+    line-height 150%
+    width 50%
 #container
     margin 0 auto
     width 90%
 #indexpage
     text-align center
-#newcase
-    margin 0 auto
 #userinfo
     position absolute
     top 25px
@@ -145,7 +147,6 @@
     padding 5%
 #about
     padding 5%
-
 textarea
     width 100%
     line-height 1.2
@@ -197,6 +198,7 @@ body
     background-color #333
     line-height 1
     height 100%
+    background-image url('/images/OffGray.jpg')
 h1, h2, h3, h4 
     color #e90
     font-weight 400
