--- a/views/case.jade
+++ b/views/case.jade
@@ -70,7 +70,7 @@ iframe(id='editbar', src='about:none', style='display:none')
   br
   button(type='button', id='deleteradio_confirm')
     | Delete
-  button(type='button', id='cancel_deleteradio')
+  button(type='button', id='deleteradio_cancel')
     | Cancel
 #feedback_dialog.dialog_box(style='display:none')
   form(id='feedback')
