--- a/views/colophon.jade
+++ b/views/colophon.jade
@@ -1,3 +1,4 @@
+#topleftdiv
 :markdown
   Application made with [node.js](http://nodejs.org/) and [express.js](http://expressjs.com), templates in [jade](http://jade-lang.com/), styled with [stylus](http://learnboost.github.com/stylus/). Written in [markdown](http://daringfireball.net/projects/markdown/). Backed by [redis](http://redis.io). Hosted by [Linode](http://linode.com/).
 
