--- a/views/readme.jade
+++ b/views/readme.jade
@@ -1,3 +1,4 @@
+#topleftdiv
 #readme
   :markdown
     **DISCLAIMER** I'm not a lawyer, and I don't work or live in the US, but from my understanding medicolegal issues can be quite complicated over there, so if you work in such an environment, **PLEASE DON'T CITE** the information you find here as authorative (well, actually this goes for everyone). I don't know if you get off the hook citing an article or book but **PLEASE DOUBLE CHECK ALL REFERENCES** provided, they are for your convenience, but I rely on people's good will that they are correct.
