--- a/views/case.jade
+++ b/views/case.jade
@@ -58,10 +58,8 @@ iframe(id='editbar', src='about:none', style='display:none')
     button(id='meta_ok', type='button')
       | OK
 #save_dialog.dialog_box(style='display:none')
-  | Save page?
-  br
   button(id='save', type='button')
-    | OK
+    | Save Page
   button(id='cancelsave', type='button')
     | Cancel
 #deleteradio_dialog.dialog_box(style='display:none')
