before shortening editfunctions

--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -2,6 +2,14 @@
     float left
     height 25px
     width 55%
+.abutton
+    padding-top 3px
+    cursor pointer
+    float left
+#feedbackbutton
+    cursor pointer
+#editbutton
+    float none
 #centerindiv
     float right
     position relative
@@ -175,10 +183,9 @@ textarea
     top 25px
     left 5%
 #editbar
-    height 25px
+    height 20px
     overflow hidden
-    float right
-    width 12em
+    width 15em
 #uploadform
     position relative
 .fileinputs
