--- a/views/layout.jade
+++ b/views/layout.jade
@@ -21,7 +21,7 @@ html
         img(src='/images/RADIOCA.SE_small_logo.png')
     #container
       #session
-        a.session(id='sign_in') Sign in with twitter
+        a.abutton(id='sign_in') Sign in with twitter
       #userinfo.session(style='display:none')
         a my cases
         br
