--- a/views/case.jade
+++ b/views/case.jade
@@ -3,13 +3,14 @@ iframe.hidden(name="postframe", id="postframe", src="about:none")
   | by:
   a(href='https://twitter.com/intent/user?screen_name=#{creator}')
     @#{creator}
-    #created(style='display:none')
-      | #{created}
-- if('#{editor}')
-    a.session(id='editbutton')
-      | ◀
-- if(!'#{editor}')
-    a.session(id='feedbackbutton')
+  | -
+  a.abutton(id='feedbackbutton', style='float:none')
+    &#x1f4ac; &#x2002;
+  - if('#{editor}')
+    a.abutton(id='editbutton', style='float:none')
+      | ▶ &#x2002;
+  #created(style='display:none')
+    | #{created}
 iframe(id='editbar', src='about:none', style='display:none')
 #texts
   .txt
@@ -41,14 +42,19 @@ iframe(id='editbar', src='about:none', style='display:none')
       #{mdhelp}
     .md
 #info(style='display:none')
+#newpage_dialog.dialog_box(style='display:none')
+  | New page:
+  button(id='newpage_next', type='button')
+    | after this one
+  button(id='newpage_last', type='button')
+    | at the end
+  button(id='newpage_cancel', type='button')
+    | Cancel
 #delete_dialog.dialog_box(style='display:none')
-  form(id='deletepage', action='/case/#{cid}/#{page}/delete')
-    | Are you sure you want to delete this page?
-    br
-    button(id='deleteconfirmed', type='button')
-      | Confirm
-    button(id='canceldelete', type='button')
-      | Cancel
+  button(id='deleteconfirmed', type='button')
+    | Delete Page
+  button(id='canceldelete', type='button')
+    | Cancel
 #meta_dialog.dialog_box(style='display:none')
   form(id='meta')
     | Title:
