--- a/views/index.jade
+++ b/views/index.jade
@@ -3,6 +3,7 @@
   .big_logo RADIOCA.SE
   br
   br
+  p(style='size:300px')
   img(src='/images/OldRadio_3_320.svg', style='width: 320px')
 
   h1.damion -Welcome
