working on 'about'

--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -5,11 +5,6 @@
 .abutton
     padding-top 3px
     cursor pointer
-    float left
-#feedbackbutton
-    cursor pointer
-#editbutton
-    float none
 #centerindiv
     float right
     position relative
@@ -34,8 +29,6 @@
     border-width 0 0 1px 1px
     border-color #aaa
     background #333
-#addstack
-    float left
 .session
     font-family helvetica, arial
     padding-top 3px
@@ -48,6 +41,9 @@
     font-weight bold
     font-size 50pt
     margin-top 30px
+.orbitron
+    font-family "Orbitron"
+    color #bca
 .damion
     font-family "Damion"
 #sl
@@ -77,10 +73,8 @@
 #radios
     float left
     width 50%
-#addstack
-    margin 5px
 .selected
-    border-color red
+    border-color #f00
     border solid
 .userradio
     width 50%
@@ -98,10 +92,10 @@
     overflow hide
 .imgload
     visibility hidden
-.deletebutton
+.deleteradio
     position absolute
     top 5px
-    right 5px
+    right 10px
 .caption
     margin 5px
 .caption>.md
@@ -185,7 +179,7 @@ textarea
 #editbar
     height 20px
     overflow hidden
-    width 15em
+    width 12em
 #uploadform
     position relative
 .fileinputs
