--- a/views/about.jade
+++ b/views/about.jade
@@ -1,9 +1,35 @@
 #topleftdiv
 #about
+  | - A database for radiological cases
+  br
+  br
   :markdown
-    \- a database of radiological cases.
-
-    This is an invite-only site. If you have been invited you can log in using your twitter account. The site is under development and free to use for the moment.
-
-    I hope the site in itself is rather self-explanatory. For more information please see the Readme.
+    * Do you have a creeping feeling that your collected cases will disappear in the next PACS upgrade?
+    * Would you like to be able to access your cases from anywhere/anything with an internet connection (including your nice, shiny iPad)?
+    * Do you want to show off your brilliant diagnosing skills and recieve the people's praise?
+  br
+  p
+    | - Just use <span class=orbitron> RADIOCA.SE </span>
+  :markdown
+    This is an invite-only site. If you have been invited you can log in using your twitter account. If you'd like an invitation please send an email saying who you are and containing your twitter username to <info@radioca.se>.
+  hr
+  br
+  p
+    a &#x1f4ac;
+    | &#x2002; Give feedback
+  p
+    a ?
+    | &#x2002; Markdown help
+  p
+    a {m}
+    | &#x2002; Page metadata
+  p
+    a &#x166d;
+    | &#x2002; Delete page
+  p
+    a ＋
+    | &#x2002; Add new page
+  p
+    a &#x2295;
+    | &#x2002; Add new image/stack
 
