--- a/views/index.jade
+++ b/views/index.jade
@@ -3,7 +3,6 @@
   .big_logo RADIOCA.SE
   br
   br
-  p(style='size:300px')
   img(src='/images/OldRadio_3_320.svg', style='width: 320px')
 
   h1.damion -Welcome
@@ -15,5 +14,6 @@
   a(href='/newcase') Create Case
 script(type='text/javascript')
   $(function(){
+    // Hides small logo
     $('#sl').hide();
   });
