--- a/views/layout.jade
+++ b/views/layout.jade
@@ -21,7 +21,7 @@ html
         img(src='/images/RADIOCA.SE_small_logo.png')
     #container
       #session
-        a.abutton(id='sign_in') Sign in with twitter
+        a.session(id='sign_in') Sign in with twitter
       #userinfo.session(style='display:none')
         a my cases
         br
@@ -34,16 +34,13 @@ html
     #footer
       a(href='/')
         | Home
-      | -
+      | &#x2002;
       a(href='/cases/0/-1')
         | Cases
-      | -
+      | &#x2002;
       a(href='/about')
         | About
-      | -
-      a(href='/readme')
-        | Readme
-      | -
+      | &#x2002;
       a(href='mailto:info@radioca.se')
         | Contact
 script(type='text/javascript')
