--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -1,7 +1,16 @@
+#cheatsheet
+    td,th
+        padding 5px
+#disclaimer
+    clear both
+#colophon
+    clear both
 #topleftdiv
     float left
     height 25px
     width 55%
+.textedit
+    float right
 .abutton
     padding-top 3px
     cursor pointer
@@ -169,6 +178,8 @@ textarea
     font-size 100%
 .md
     padding 10px 30px
+.mdtxt
+    float left
 #markdown-help
     background-image url("/images/paper/Texture0213.jpg")
     color #006
